errors.txt
/src/source/st7735/image.cpp: In function 'void SImageMethods::fillTriangle(SImage_, int, int, int, int, int, int, int)':
/src/source/st7735/image.cpp:1316:20: error: call of overloaded 'swap(int&, int&)' is ambiguous
         swap(x0, x1);
                    ^
In file included from /src/source/pxt.h:8:0,
                 from /src/source/st7735/image.cpp:1:
/src/source/pxtbase.h:111:35: note: candidate: void pxt::swap(T&, T&) [with T = int]
 template <typename T> inline void swap(T &a, T &b) {
                                   ^
In file included from /opt/gcc-arm-none-eabi-5_4-2016q3/arm-none-eabi/include/c++/5.4.1/bits/stl_pair.h:59:0,
                 from /opt/gcc-arm-none-eabi-5_4-2016q3/arm-none-eabi/include/c++/5.4.1/utility:70,
                 from /opt/gcc-arm-none-eabi-5_4-2016q3/arm-none-eabi/include/c++/5.4.1/algorithm:60,
                 from /src/yotta_modules/ble/ble/BLEProtocol.h:22,
                 from /src/yotta_modules/ble/ble/Gap.h:20,
                 from /src/yotta_modules/ble/ble/BLE.h:21,
                 from /src/yotta_modules/microbit-dal/inc/bluetooth/MicroBitBLEManager.h:42,
                 from /src/yotta_modules/microbit/inc/MicroBit.h:64,
                 from /src/source/pxtcore.h:4,
                 from /src/source/pxtbase.h:59,
                 from /src/source/pxt.h:8,
                 from /src/source/st7735/image.cpp:1:

     ^
/src/source/st7735/image.cpp: In function 'pxt::RefImage* image::ofBuffer(pxt::Buffer)':
/src/source/st7735/image.cpp:1483:12: error: 'ImageMethods' has not been declared
     return ImageMethods::convertAndWrap(buf);
            ^
/src/source/st7735/image.cpp: In function 'pxt::BoxedBuffer* image::doubledIcon(pxt::Buffer)':
/src/source/st7735/image.cpp:1496:14: error: 'ImageMethods' has not been declared
     auto t = ImageMethods::doubled(r);
              ^


/src/source/st7735/panic.cpp:156:22: error: 'target_wait_us' was not declared in this scope
     target_wait_us(ms);
                      ^
/src/source/st7735/panic.cpp: In member function 'void _pxt_panic::ST7735::init()':
/src/source/st7735/panic.cpp:193:23: error: 'DISPLAY_MOSI' was not declared in this scope
     mosi = LOOKUP_PIN(DISPLAY_MOSI);
                       ^
/src/source/st7735/panic.cpp:193:35: error: 'LOOKUP_PIN' was not declared in this scope
     mosi = LOOKUP_PIN(DISPLAY_MOSI);
                                   ^
/src/source/st7735/panic.cpp:194:22: error: 'DISPLAY_SCK' was not declared in this scope
     sck = LOOKUP_PIN(DISPLAY_SCK);
                      ^
/src/source/st7735/panic.cpp:195:21: error: 'DISPLAY_CS' was not declared in this scope
     cs = LOOKUP_PIN(DISPLAY_CS);
                     ^
/src/source/st7735/panic.cpp:196:21: error: 'DISPLAY_DC' was not declared in this scope
     dc = LOOKUP_PIN(DISPLAY_DC);
                     ^
/src/source/st7735/panic.cpp:197:26: error: 'DISPLAY_BL' was not declared in this scope
     auto bl = LOOKUP_PIN(DISPLAY_BL);
                          ^
/src/source/st7735/panic.cpp:198:27: error: 'DISPLAY_RST' was not declared in this scope
     auto rst = LOOKUP_PIN(DISPLAY_RST);
                           ^
/src/source/st7735/panic.cpp: In function 'void _pxt_panic::drawPanic(int)':
/src/source/st7735/panic.cpp:250:21: error: 'DISPLAY_MOSI' was not declared in this scope
     if (!LOOKUP_PIN(DISPLAY_MOSI))
                     ^
/src/source/st7735/panic.cpp:250:33: error: 'LOOKUP_PIN' was not declared in this scope
     if (!LOOKUP_PIN(DISPLAY_MOSI))
                                 ^
/src/source/st7735/panic.cpp: In function 'void _pxt_panic::target_panic(int)':
/src/source/st7735/panic.cpp:274:24: error: 'target_disable_irq' was not declared in this scope
     target_disable_irq(); // make sure they stay disabled in DMESG()
                        ^
/src/source/st7735/panic.cpp:295:27: error: 'LED' was not declared in this scope
     auto led = LOOKUP_PIN(LED);
                           ^
/src/source/st7735/panic.cpp:295:30: error: 'LOOKUP_PIN' was not declared in this scope
     auto led = LOOKUP_PIN(LED);
                              ^
ninja: build stopped: subcommand failed.
error: command ['ninja'] failed
